# KojaLoopWorker

./: .env.example  .gitignore  .loopworker-launch.sh  .loopworker-prompt.txt  AGENTS.md  DESIGN.md  README.md  config.toml.example  pyproject.toml
.github/workflows/: ci.yml  release.yml
.loopworker/: BRIEF.md  manifest.toml  provision.sh  reset.sh  teardown.sh  verify.sh
docs/: dev_guide.md  distribution.md  index.md
examples/: loopworker-manifest.toml
examples/patch/: manifest.toml  provision.sh  reset.sh  teardown.sh  verify.sh
loopworker/: __init__.py  __main__.py  authgate.py  config.py  dashboard.py  engine.py  filelog.py  host.py  manager.py  models.py  names.py  notify.py  readiness.py  reconciler.py  slots.py  tmux.py
loopworker/backlog/: __init__.py  base.py  patch.py
macapp/: .gitignore  Info.plist  README.md  freeze-manager.sh  generate-appicon.sh  loopworker.entitlements  loopworker_entry.py  project.yml  sign-and-notarize.sh
macapp/Sources/: AppState.swift  ConfigStore.swift  ConnectView.swift  Keychain.swift  LoopWorkerApp.swift  ManagerController.swift  MenuBarIcon.swift  MenuContentView.swift  Models.swift  ProcessRunner.swift  SetupView.swift  SetupWindowController.swift  (+2 more)
packaging/: install.sh  loopworker.service
tests/: test_authgate.py  test_cli.py  test_config.py  test_dashboard.py  test_dotenv.py  test_engine.py  test_filelog.py  test_host.py  test_manager_integration.py  test_notify.py  test_packaging.py  test_parent_watch.py  test_patch_adapter.py  test_readiness.py  test_reconciler.py  test_slots.py  test_tmux_summary.py
